# je2be-ios

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.ja-JP  CMakeLists.txt  Gemfile  LICENSE
fastlane/: Fastfile.in  Pluginfile
localization/: ja-JP.lang
resource/: Info.template.plist  Info.template.plist.in
resource/Settings.bundle/: Root.plist
resource/Settings.bundle/en.lproj/: Root.strings
resource/Settings.bundle/ja.lproj/: Root.strings
resource/assets.xcassets/large-icon.imageset/: Contents.json
script/: localization.sh  pre-build.sh
src/: AboutViewController.xib  AppDelegate.swift  AtomicBool.swift  BridgingHeader.h  ChooseInputViewController.swift  ChooseInputViewController.xib  ChooseJavaInputViewController.swift  ChooseJavaInputViewController.xib  ConversionType.swift  ConvertBedrockToJava.swift  ConvertJavaToBedrock.h  ConvertJavaToBedrock.mm  ConvertJavaToBedrock.swift  ConvertPS3ToBedrock.swift  ConvertPS3ToJava.swift  ConvertXbox360ToBedrock.swift  ConvertXbox360ToJava.swift  Converter.h  Core.h  Core.mm  ErrorCode.swift  ErrorViewController.swift  ErrorViewController.xib  LaunchScreen.storyboard  LicenseViewController.swift  LicenseViewController.xib  Localization.swift  MainViewController.swift  MainViewController.xib  ModeSelectViewController.swift  ModeSelectViewController.xib  ProgressBar.swift  ProgressViewController.swift  ProgressViewController.xib  SceneDelegate.swift  SecurityScopedResource.swift  String.swift  TemporaryDirectory.swift  UUID.swift  UserDefaults.swift  (+1 more)
